Inicio do repositório externo.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/NextLevel
 endorsed.classpath=
 excludes=
-file.reference.NextLevel-libs=libs
+file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\andrey.piekas\\Desktop\\NextLevel\\Connector\\mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.NextLevel-libs}
+    ${file.reference.mysql-connector-java-8.0.27.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
