--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/NextLevel
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\andrey.piekas\\Desktop\\NextLevel\\Connector\\mysql-connector-java-8.0.27.jar
+file.reference.mysql-connector-java-8.0.27.jar-1=E:\\Google Drive\\Documents\\mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.27.jar}
+    ${file.reference.mysql-connector-java-8.0.27.jar}:\
+    ${file.reference.mysql-connector-java-8.0.27.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
